# MergeSortAndBinarySearch

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Array.h.8A2D31A42FBD80FF.idx  BinarySearch.c.7A5D4257E6F6E053.idx  BinarySearch.h.C81E79002C4571B7.idx  Divisions.h.9864EC23BB64D3A7.idx  MergeSort.c.A92EBFCE0AABF48E.idx  MergeSort.h.C1BBE952E0292FAF.idx  divide.c.D4DC4EF1B98B3BA1.idx  divide.h.C1EAA536CB658E93.idx  main.c.7508F05BCE862A71.idx  merge.c.541C5DB9E5BD4C2E.idx  merge.h.268FACDFDFCABB94.idx  min.c.3143CA623105175E.idx  min.h.DA6A2CC77A0E2D78.idx  printArray.c.6F74036EC5D10E7A.idx  printArray.h.151D3D53DACAD24E.idx
include/: BinarySearch.h  Input.h  MergeSort.h
include/Functions/: divide.h  merge.h  printArray.h
include/Structs/: Array.h  Divisions.h
src/: BinarySearch.c  Input.c  MergeSort.c  main.c
src/Functions/: divide.c  merge.c  min.c  printArray.c
